--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "d3": "^5.15.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.1",
-    "uuid": "^3.4.0"
+    "react-scripts": "3.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
