--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "d3": "^5.15.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-popper-tooltip": "^2.10.1",
     "react-scripts": "3.3.1"
   },
   "scripts": {
